# cpp_backend

./: .gitignore  README.md
Weather/: main.cpp
final_project_Excel_table/: test.sh
final_project_Excel_table/indexConverter/: structures.cpp
project_Excel_table/: CMakeLists.txt  FormulaAST.cpp  FormulaAST.h  cell.cpp  cell.h  common.h  formula.cpp  formula.h  main.cpp  sheet.cpp  sheet.h  structures.cpp  test.sh
project_Image_Coverter/ImgConverter/: CMakeLists.txt
project_Image_Coverter/ImgLib/: CMakeLists.txt  jpeg_image.h
project_Transport_Router/: Makefile  domain.h  json_builder.cpp  json_builder.h  json_reader.cpp  main.cpp  transport_catalogue.cpp
project_Transport_Router/test_cases/: et_output2.txt  input4.txt
project_search_server/: document.cpp  document.h  main.cpp  paginator.h  request_queue.cpp  request_queue.h  search_server.cpp  search_server.h  string_processing.cpp
sprint1/: test.sh
sprint1/Find_Print_In_Container/: main.cpp
sprint1/My_Stack_and_Sorting_Stack/: main.cpp
sprint1/search_engine_base/: a.out  main.cpp
sprint1/search_engine_errors/: main.cpp
sprint1/search_engine_minus/: main.cpp
sprint1/search_engine_overload/: main.cpp
sprint1/search_engine_paginate/: main.cpp
sprint1/search_engine_qu_requests/: main.cpp
sprint1/search_engine_qu_requests copy/: main.cpp
sprint1/search_engine_ratings/: main.cpp
sprint1/search_engine_relevant/: main.cpp
sprint1/search_engine_sort/: main.cpp
sprint1/search_engine_tf_idf/: main.cpp
sprint1/search_engine_unit_tests/: Makefile  main.cpp
sprint1/stops_and_buses/: main.cpp
sprint1/task_tracker/: main.cpp
sprint10_backend/bookypedia-1/: CMakeLists.txt  Dhelper.sh  conanfile.txt  helper.sh
sprint10_backend/bookypedia-1/src/: bookypedia.cpp  bookypedia.h
sprint10_backend/db_of_books/: CMakeLists.txt  docker-compose.yaml  helper.sh  run_curl.sh
sprint10_backend/postgres_example/: CMakeLists.txt  helper.sh
sprint10_backend/state_serialization/: CMakeLists.txt  Recovery.txt  conanfile.txt  helper.sh
sprint2/: test.sh
sprint2/Create_files/: main.cpp
sprint2/Editor/: main.cpp
sprint2/Get_Filesize/: main.cpp
sprint2/Josephus_Permutation/: main.cpp
sprint2/Own_Array/: Makefile  main.cpp
sprint2/Own_ForwardList/: main.cpp  single-linked-list.h
sprint2/Own_Preprocessor/: main.cpp
sprint2/Own_StackVector/: main.cpp  stack_vector.h
sprint2/Own_Vector/: Makefile  array_ptr.h  main.cpp  simple_vector.h  tests.h
sprint2/Print_file_structure/: Makefile  main.cpp
sprint2/Split_into sentences/: Makefile  main.cpp
sprint2/Spliting_string_into_words/: main.cpp
sprint2/Translator/: main.cpp
sprint2/Vector_of_p/: main.cpp
sprint2/Weather/: main.cpp
sprint2/stops_and_buses/: main.cpp
sprint3/Bimap/: bimap.cpp  bimap.h  main.cpp
sprint3/CanvasShapes/: common.h  main.cpp  shapes.h  texture.h
sprint3/CanvasTiles/: image.h  main.cpp  tile.h
sprint5/using_libJpeg/: CMakeLists.txt  Makefile  hmirr.cpp  sobel.cpp  test.sh  vmirr.cpp
(+413 files in other folders)
